--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_core.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_core.scss
@@ -62,8 +62,8 @@
 .menubar-link,
 .nav-link,
 .dropdown-item {
-    .fa + span, .fa + em { padding-left: 0.4em; }
-    span + .fa, em + .fa { margin-left: 0.4em; }
+    .fa + span, .fa + em, .icm + span, .icm + em { padding-left: 0.4em; }
+    span + .fa, em + .fa, span + .icm, em + .icm { margin-left: 0.4em; }
 }
 
 
