Theming: further work on better styling for sub action items

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
@@ -437,19 +437,20 @@ $pd-offer-spacing:              $grid-gutter-width-base / 2;
     > *:not(:last-child) { margin-bottom: $pd-offer-spacing / 2;  }
 }
 
-.pd-actions { 
-    overflow: hidden;
+.pd-actions {
+    overflow-x: auto;
     flex-wrap: nowrap;
 
     .pd-action-item {
         text-align: center;
         border-right: 1px solid rgba(#000, 0.15);
+        padding-top: 6px; // for the transform
         &:last-child { border-color: transparent; }
 
-        &.col .pd-action-label {
-            // When more than 4 action items are available,
-            // .col is used instead of .col-(x). These need special care
-            // concerning responsiveness.
+        // When more than 4 action items are available,
+        // .col is used instead of .col-(x). These need special care
+        // concerning responsiveness.
+        &.col .pd-action-label, &.col-2 .pd-action-label {
             display: none !important;
             @include media-breakpoint-only(sm) { display: block !important;  }
             @include media-breakpoint-up(xl) { display: block !important;  }
@@ -462,7 +463,6 @@ $pd-offer-spacing:              $grid-gutter-width-base / 2;
         text-decoration: none;
         color: inherit;
         height: 100%;
-        &.pd-action-link-special { font-weight: 600 }
 
         .pd-action-icon {
             display: block;
@@ -470,17 +470,20 @@ $pd-offer-spacing:              $grid-gutter-width-base / 2;
             line-height: 20px;
             vertical-align: middle;
             color: $pd-offer-muted-color;
+            transition: all 0.125s ease-out;
+            transform-origin: bottom;
         }
 
         .pd-action-label {
-            padding-top: 0.3rem;
+            padding-top: 0.375rem;
             display: block;
             overflow: hidden;
             text-overflow: ellipsis;
         }
 
-        &:hover .pd-action-label { 
-            text-decoration: underline; 
+        &:hover .pd-action-icon { 
+            color: inherit;
+            transform: scale(1.14);
         }
     }
 }
