--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
@@ -32,19 +32,16 @@
 		<div class="row sm-gutters pd-actions">
 			@{
 				var colClass = "col";
-				if (actions.Count < 5)
+				if (actions.Count < 5 || actions.Count == 6)
 				{
 					colClass += "-" + 12 / actions.Count;
 				}
-
-				int i = 0;
 			}
 			@foreach (var action in actions)
 			{
-				i++;
 				var key = action.Key;
 				var isSpecial = key == "wishlist" || key == "compare";
-				<div class="@colClass pd-action-item">
+				<div class="@colClass pd-action-item" @Html.Attr("style", "width: 20%; min-width: 20%", actions.Count == 5)>
 					@if (isSpecial)
 					{
 						<a data-href='@action.Href' @Html.Attr("data-form-selector", "#pd-form", key == "wishlist")
@@ -52,18 +49,23 @@
 						   href="#"
 						   class="pd-action-link@(isSpecial ? " pd-action-link-special" : "") @action.CssClass"
 						   rel="nofollow"
-						   data-toggle="tooltip"
 						   data-type="@key"
 						   data-action="add">
 							<i class="pd-action-icon @action.IconCssClass"></i>
-							<span class="pd-action-label">@action.Title</span>
+							@if (actions.Count < 7)
+							{
+								<span class="pd-action-label@(actions.Count > 4 ? " fs-sm" : "")">@action.Title</span>
+							}
 						</a>
 					}
 					else
 					{
-						<a class="pd-action-link@(isSpecial ? " pd-action-link-special" : "") @(action.CssClass)" href="@action.Href" rel="nofollow" title="@action.Tooltip" data-toggle="tooltip">
+						<a class="pd-action-link@(isSpecial ? " pd-action-link-special" : "") @(action.CssClass)" href="@action.Href" rel="nofollow" title="@action.Tooltip">
 							<i class="pd-action-icon @action.IconCssClass"></i>
-							<span class="pd-action-label">@action.Title</span>
+							@if (actions.Count < 7)
+							{
+								<span class="pd-action-label@(actions.Count > 4 ? " fs-sm" : "")">@action.Title</span>
+							}
 						</a>
 					}
 				</div>
