--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -23,7 +23,7 @@
 
         @{ Html.RenderWidget("manufacturers_all_top"); }
 
-        @if (catalogSettings.SortManufacturersAlphabetically)
+        @if (true /* catalogSettings.SortManufacturersAlphabetically*/)
         {
             <div class="manufacturer-nav">
                 <ul class="navbar justify-content-start list-unstyled">
@@ -124,7 +124,7 @@
 <script type="text/javascript">
     $(function () {
         $('.manufacturer-nav .nav-link').click(function (e) {
-            e.preventDefault();
+        	e.preventDefault();
             $.scrollTo(e.target.getAttribute('href'), 800);
             return false;
         });
