--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -50,6 +50,7 @@
 
 <script>
 	$(function () {
+		console.log("DateTimePicker Render: ", $.smartstore.globalization.culture);
 		$("#@(id)-parent").datetimepicker({ locale: 'glob', format: '@(format)', keepOpen: false, collapse: true });
     });
 </script>
