--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -16,11 +16,13 @@
 
 	var volatileJsRoot = "~/Administration/Scripts/";
 	var vendorsRoot = "~/Administration/Content/vendors/";
+	var flexJsRoot = "~/Themes/Flex/Scripts/";
+	var flexCssRoot = "~/Themes/Flex/Content/css/";
 
 	// add css assets
 	var telerikCssRootPath = "~/Content/2012.2.607/";
 	Html.AppendCssFileParts(
-		"~/Themes/Flex/Content/css/fontastic.css",
+		flexCssRoot + "fontastic.css",
 		"~/Content/font-awesome.css",
 		telerikCssRootPath + "telerik.common.css",
 		"~/Content/jquery.pnotify.default.css",
@@ -36,15 +38,7 @@
 		//"~/Administration/Scripts/jquery-1.8.3.js",
 		volatileJsRoot + "jquery-3.2.1.js",
 		volatileJsRoot + "jquery-migrate-3.2.1.js",
-		volatileJsRoot + "jquery-shims.js",
-		// SmartStore system
-		"~/Scripts/smartstore.system.js",
-		"~/Scripts/underscore.js",
-		"~/Scripts/underscore.string.js",
-		"~/Scripts/underscore.mixins.js",
-		"~/Scripts/smartstore.jquery.utils.js",
-		vendorsRoot + "moment/moment.js",
-		"~/Scripts/smartstore.globalization.js");
+		volatileJsRoot + "jquery-shims.js");
 
 	// add js assets (Foot)
 	var bootstrapJsRoot = "~/Content/bootstrap/js/";
@@ -60,6 +54,15 @@
 		"~/Scripts/jquery.unobtrusive-ajax.js",
 		"~/Scripts/jquery.validate.js",
 		"~/Scripts/jquery.validate.unobtrusive.js",
+		flexJsRoot + "jquery.validate.unobtrusive.custom.js",
+		// SmartStore system
+		"~/Scripts/underscore.js",
+		"~/Scripts/underscore.string.js",
+		"~/Scripts/underscore.mixins.js",
+		"~/Scripts/smartstore.system.js",
+		"~/Scripts/smartstore.jquery.utils.js",
+		vendorsRoot + "moment/moment.js",
+		"~/Scripts/smartstore.globalization.js",
 		// Common
 		"~/Scripts/jquery.ba-outside-events.js",
 		"~/Scripts/jquery.preload.js",
@@ -112,6 +115,8 @@
     <link rel="shortcut icon" href="~/Administration/favicon.ico" />
 
 	@Html.CustomHead()
+
+	<script src="~/Scripts/smartstore.globalization.adapter.js"></script>
 </head>
 <body class="@Html.BodyCssClass()"@(Html.BodyId())>   
 	@RenderBody()
