--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -76,7 +76,7 @@
                             </a>
                             @if (Model.DisplayAddToCart)
                             {
-                                <a class="btn btn-secondary btn-sm btn-icon ajax-action-link" title="@T("ShoppingCart.MoveToWishlist")"
+                                <a class="btn btn-secondary btn-sm btn-icon ajax-action-link" title="@T("ShoppingCart.AddToCart")"
                                    href="#"
                                    rel="nofollow"
                                    data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.Wishlist, isCartPage = true })"
