Resolves #1268 Data importer always inserts new pictures and does not detect equal pictures while importing

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -172,6 +172,7 @@
 							@*TODO: number of products, product summary?*@
 							columns.Bound(x => x.OrderNumber)
 								.Width(250)
+								.Title(T("Admin.Order"))
 								.ClientTemplate("<span class='label label-smnet <#= OrderStatusLabelClass #>'><#= OrderStatus #></span>" + @Html.LabeledOrderNumber());
 							columns.Bound(x => x.CustomerName)
 								.Title(T("Admin.Orders.Fields.Customer"))
