--- a/src/Presentation/SmartStore.Web/Content/editors/ckeditor/skins/smartstore/editor.css
+++ b/src/Presentation/SmartStore.Web/Content/editors/ckeditor/skins/smartstore/editor.css
@@ -951,7 +951,7 @@ legend.cke_voice_label {
 }
 
 
-.cke_chrome {
+.wkit .cke_chrome {
 	/* Chrome 60+ overflow auto scrollbar fix */
 	position: relative;
 }
