--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1799,3 +1799,12 @@ table.payment-method-features td {
 .bootstrap-datetimepicker-widget th.switch {
   display: table-cell;
 }
+
+
+/* CKEditor skinning
+-------------------------------------------------------------- */
+
+.cke_chrome.cke_focus {
+	border-color: @blue;
+	box-shadow: none;
+}
