UI: slightly redesigned order grid in backend

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -47,6 +47,14 @@ a:hover {
     padding-bottom: 14px;
 }
 
+.fw-600 {
+	font-weight: 600;
+}
+
+.fw-bold {
+	font-weight: bold;
+}
+
 /* Page
 -------------------------------------------------------------- */
 
