--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -171,10 +171,11 @@
 								.HeaderHtmlAttributes(new { style = "text-align:center" });
 							@*TODO: number of products, product summary?*@
 							columns.Bound(x => x.OrderNumber)
-								.Width(250)
+								.Width(150)
 								.Title(T("Admin.Order"))
-								.ClientTemplate("<span class='label label-smnet <#= OrderStatusLabelClass #>'><#= OrderStatus #></span>" + @Html.LabeledOrderNumber());
+								.ClientTemplate(@Html.LabeledOrderNumber());
 							columns.Bound(x => x.CustomerName)
+								//.Width(300)
 								.Title(T("Admin.Orders.Fields.Customer"))
 								.ClientTemplate(
 									"<div><#= CustomerName #></div>" +
@@ -182,19 +183,26 @@
 							columns.Bound(x => x.ShippingStatus)
 								.Title(T("Admin.Orders.Shipment"))
 								.ClientTemplate(
-									"<div><span class='label label-smnet <#= ShippingStatusLabelClass #>'><#= ShippingStatus #></span><span><#= ShippingAddressString #></span></div>" +
-									"<# if(IsShippable){ #><div class='muted'>" + viaString + " <#= ShippingMethod #></div><# } #>");
+									"<div><i class='<#= ShippingStatusLabelClass #>' title='<#= ShippingStatus #>'></i> " +
+									"<# if(IsShippable){ #><span><#= ShippingAddressString #></span><# } #>" +
+									"<# if(IsShippable){ #><div class='muted'>" + viaString + " <#= ShippingMethod #></div><# } #>" +
+									"<# if(!IsShippable){ #><span class='muted'><#= ShippingStatus #></span><# } #>" +
+									"</div>");
 							columns.Bound(x => x.CreatedOn)
 								.Width(200)
 								.Title(T("Order.OrderDate"))
 								.ClientTemplate(
 									"<div><#= CreatedOnString #></div>" +
 									"<div class='muted'>" + viaString + " <#= StoreName #></div>");
+							columns.Bound(x => x.OrderStatus)
+								.Width(100)
+								.Title(T("Admin.Orders.Fields.OrderStatus"))
+								.ClientTemplate("<span class='<#= OrderStatusLabelClass #>'><#= OrderStatus #></span>");
 							columns.Bound(x => x.OrderTotal)
 								.Width(200)
 								.RightAlign()
 								.ClientTemplate(
-									"<div><span class='label label-smnet <#= PaymentStatusLabelClass #>'><#= PaymentStatus #></span><span><big><#= OrderTotal #></big></span></div>" +
+									"<div><big style='font-weight:600'><#= OrderTotal #></big> <i class='<#= PaymentStatusLabelClass #>' title='<#= PaymentStatus #>'></i></div>" +
 									"<# if(HasPaymentMethod){ #><div class='muted'>" + viaString + " <#= PaymentMethod #></div><# } #>")
 								.FooterTemplate(
 									string.Format("<div><b>{0}:</b></div>" +
