--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -59,13 +59,18 @@
 //
 // Hacks
 // -------------------------------------------------
-.ie11 .pd-offer-actions .col,
-.ie11 .offcanvas-cart-footer-row .col {
-    width: auto;
-    -ms-flex-preferred-size: auto;
-}
-.ie11 .megamenu-dropdown-container.simple {
-    position: static;
+.ie11 {
+    .pd-offer-actions .col,
+    .offcanvas-cart-footer-row .col {
+        width: auto;
+        -ms-flex-preferred-size: auto;
+    }
+    .megamenu-dropdown-container.simple {
+        position: static;
+    }
+    .instasearch-button {
+        height: 100%;
+    }
 }
 .edge .offcanvas-cart-footer-col.d-flex {
     display: -webkit-box !important;
