--- a/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
@@ -63,14 +63,7 @@
             	var result = data.result;
 
             	if (result.downloadGuid) {
-            		elHidden.val(result.downloadGuid);
-
-            		var downloadLink = "@storeUrl" + "download/getfileupload/?downloadId=" + result.downloadGuid;
-            		var fileName = data.files[0].name;
-            		var fileLink = '<a href="' + downloadLink + '" class="fileuploadattribute" rel="nofollow">' + fileName + '</a>';
-
-            		elFile.html(fileLink).removeClass("d-none");
-            		elRemove.show();
+            		setUploadedFile(result.downloadGuid, data.files[0].name);
             	}
 
             	if (result.message) {
@@ -90,5 +83,19 @@
             $(this).hide();
             e.preventDefault();
         });
+
+        setUploadedFile('@Model.UploadedFileGuid', '@Model.UploadedFileName');
+
+        function setUploadedFile(downloadGuid, fileName) {
+        	if (!_.isEmpty(downloadGuid)) {
+        		elHidden.val(downloadGuid);
+
+        		var downloadLink = "@storeUrl" + "download/getfileupload/?downloadId=" + downloadGuid;
+        		var fileLink = '<a href="' + downloadLink + '" class="fileuploadattribute" rel="nofollow">' + fileName + '</a>';
+
+        		elFile.html(fileLink).removeClass("d-none");
+        		elRemove.show();
+        	}
+        }
     });
 </script>
